2012-01-29  Paul Smith  <psmith@gnu.org>

	* function.c (func_file): Create a new function, $(file ...)
	* doc/make.texi (File Function): Document the $(file ..) function.
	* NEWS: Announce it.

	* gmk-default.scm (to-string-maybe): Use a more portable way to
	test for unprintable characters.
	* configure.in [GUILE]: Guile 1.6 doesn't have pkg-config
	* build_w32.bat: Ditto.

2012-01-28  Eli Zaretskii  <eliz@gnu.org>

	* config.h.W32.template: Update from config.h.in.

	Support a Windows build with Guile.

	* README.W32.template: Update with instructions for building with
	Guile.

	* build_w32.bat: Support building with Guile.

	* make.h [HAVE_STDINT_H]: Include stdint.h.

	* main.c (main, clean_jobserver): Move declarations of variables
	not used in the WINDOWS32 build to the #else branch, to avoid
	compiler warnings.

	Fix failures on MS-Windows when Make's standard handles are invalid.
	This can happen when Make is invoked from a GUI application.

	* w32/subproc/sub_proc.c (process_init_fd): Don't dereference
	pproc if it is a NULL pointer.
	(process_begin, process_cleanup): Don't try to close pipe handles
	whose value is INVALID_HANDLE_VALUE.
	(process_easy): Initialize hIn, hOut, and hErr to
	INVALID_HANDLE_VALUE.  If DuplicateHandle fails with
	ERROR_INVALID_HANDLE, duplicate a handle for the null device
	instead of STD_INPUT_HANDLE, STD_OUTPUT_HANDLE or
	STD_ERROR_HANDLE.  Don't try to close pipe handles whose value is
	INVALID_HANDLE_VALUE.

	* function.c (windows32_openpipe): Initialize hIn and hErr to
	INVALID_HANDLE_VALUE.  If DuplicateHandle fails with
	ERROR_INVALID_HANDLE, duplicate a handle for the null device
	instead of STD_INPUT_HANDLE or STD_ERROR_HANDLE.  Fix indentation.
	Don't try to close handles whose value is INVALID_HANDLE_VALUE.

2012-01-25  Eli Zaretskii  <eliz@gnu.org>

	* function.c (define_new_function): Fix format strings in calls to
	`fatal'.

2012-01-17  Paul Smith  <psmith@gnu.org>
