@@ -1,5 +1,8 @@
 2012-01-29  Paul Smith  <psmith@gnu.org>
 
+	* scripts/variables/flavors: Add tests for ::=
+	* scripts/variables/define: Ditto
+
 	* scripts/functions/file: Test the new $(file ...) function.
 
 2012-01-12  Paul Smith  <psmith@gnu.org>
